# kaggle-leap-7th-place-solution

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
config/: exp_075.yaml  exp_145.yaml  exp_146.yaml  exp_147.yaml  exp_148.yaml  exp_149.yaml  exp_150.yaml  exp_151.yaml  global.yaml  transformer.yaml
exp/: demo.ipynb  demo.py  log.txt  run.sh
exp/data/output/146/: log_2024-10-13-12-35-28.txt  log_2024-10-14-00-57-25.txt  log_2024-10-14-06-11-50.txt  log_2024-10-14-06-12-10.txt
exp/data/output/151/: log_2024-10-14-06-12-24.txt  log_2024-10-14-06-13-13.txt  log_2024-10-14-06-15-16.txt  log_2024-10-14-06-19-36.txt  log_2024-10-14-06-25-45.txt  log_2024-10-14-06-26-03.txt
src/: main.py  tmp.py
src/data/: __init__.py  data_provider.py  feature_creator.py  feature_engineering.py  hf_download.py  hf_preprocess.py  postprocess.py  preprocess.py  validation.py
src/kaggle/: README.md  download.py  upload.py
src/model/: __init__.py  transformer_seq2seq.py
src/model/models/: base.py  conv1d.py  lstm.py  moa2nd.py  squeezeformer.py  transformer.py  unet.py
src/model/modules/: __init__.py  attention.py  conv_extractor.py  lstm_block.py  positional_encoding.py  resnet_block.py  se_block.py  squeezeformer_block.py
src/train/: __init__.py  component_factory.py  dataset.py  ema.py  loss.py  optimizer.py  scheduler.py  trainer.py
src/utils/: __init__.py  competition_utils.py  config.py  constant.py  hf_download.py  logger.py  metric.py  timer.py  utils.py
