[project]
name = "kaggle-leap"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=1.26.1",
    "pandas>=2.1.2",
    "polars>=0.19.12",
    "tqdm>=4.66.1",
    "ipykernel>=6.26.0",
    "kaggle==1.6.12",
    "matplotlib>=3.8.1",
    "seaborn>=0.13.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.2",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.1",
    "lightgbm>=4.1.0",
    "xgboost>=2.0.1",
    "catboost>=1.2.2",
    "streamlit>=1.31.1",
    "lightning>=2.2.4",
    "transformers>=4.37.2",
    "sentencepiece>=0.1.99",
    "loguru>=0.7.2",
    "python-slugify>=8.0.4",
    "omegaconf>=2.3.0",
    "datasets>=2.20.0",
    "xarray>=2024.6.0",
    "netcdf4>=1.7.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_leap"]
