[project]
name = "kaggle-leap-atmospheric-physics-ai-climsim"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=1.26.1",
    "pandas>=2.1.2",
    "polars>=0.19.12",
    "tqdm>=4.66.1",
    "ipykernel>=6.26.0",
    "kaggle==1.6.12",
    "matplotlib>=3.8.1",
    "seaborn>=0.13.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.2",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.1",
    "lightgbm>=4.1.0",
    "xgboost>=2.0.1",
    "catboost>=1.2.2",
    "streamlit>=1.31.1",
    "lightning>=2.2.4",
    "transformers>=4.37.2",
    "sentencepiece>=0.1.99",
    "loguru>=0.7.2",
    "python-slugify>=8.0.4",
    "omegaconf>=2.3.0",
    "datasets>=2.20.0",
    "xarray>=2024.6.0",
    "netcdf4>=1.7.0",
    "ruff>=0.6.7",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchvision>=0.19.1",
    "huggingface-hub>=0.25.1",
    "h5py>=3.12.1",
    "pre-commit>=4.0.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_leap_atmospheric_physics_ai_climsim"]

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "third_party"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",  # flake8-builtin
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warning
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "B905",  # Zip-without-explicit-strict
    "E501",  # Line too long
    "F403",  # Unable to detect undefined names
    "N803", # Argument name should be lowercase
    "N806", # Variable in function should be lowercase
    "N812",  # Lowercase imported as non-lowercase
    "N999",  # Invalid module name
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR2004",  # Magic value used in comparison
    "F401", # Unused-import
]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
